--- a/DataReduction/DataReduction.csproj
+++ b/DataReduction/DataReduction.csproj
@@ -47,6 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Alphabet.cs" />
+    <Compile Include="HaffmanForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HaffmanForm.Designer.cs">
+      <DependentUpon>HaffmanForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HaffmanTree.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="HaffmanForm.resx">
+      <DependentUpon>HaffmanForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
