--- a/DataCheck/DataCheck.csproj
+++ b/DataCheck/DataCheck.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HammingCode.cs" />
+    <Compile Include="HammingExampleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HammingExampleForm.Designer.cs">
+      <DependentUpon>HammingExampleForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="HammingExampleForm.resx">
+      <DependentUpon>HammingExampleForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
